# wordlesolver

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  tests.ipynb
.github/workflows/: publish_package.yml  unit_tests.yml
api/: app.py
data/es/: words.csv
scripts/: guesses_per_game.py  initial_guess.py  remove_word.py  solver.py  weight_threshold.py
tests/: test_exceptions.py  test_filter.py  test_theory.py
wordlesolver/: common.py  filter.py  recalculate_probs.ipynb  solver.py  tests.ipynb  theory.py
wordlesolver/common/: query.py  theory.py  validation.py  variables.py
wordlesolver/common/core/: exceptions.py  utilities.py  variables.py
wordlesolver/core/: common.py  errors.py  variables.py
wordlesolver/data/: probabilities_es.csv
wordlesolver/data/en/: words.csv
