[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "wordlesolver"
dynamic = [
    "version",
]
description = "Wordle assistant library based on Mathematics and Information Theory"
readme = "README.md"
authors = [
  { name="Fernando Mendi", email="fernandomendicamara@gmail.com" },
]
license = {file = "LICENSE"}
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
repository = "https://github.com/fernandomendi/wordlesolver"

[tool.setuptools]
packages = [
    "wordlesolver",
]

[tool.pytest.ini_options]
testpaths = [
    "tests/",
]
